fix: add notification banner uncommented and add dark mode to it

--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -74,6 +74,8 @@
   --color-border-strong: #c8c8d4;
   --color-border-hover: #5f5f77;
 
+  --color-notification-banner: #F8F9FF;
+
   --color-success-weak: #def7e3;
   --color-success-weaker: #ebfbec;
   --color-success: #0f7b16;
